Introduced rtl.services and added tests with specifications.

--- a/Rtl.Data.Sql/Rtl.Data.Sql.csproj
+++ b/Rtl.Data.Sql/Rtl.Data.Sql.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Rtl.Domain\Rtl.Domain.csproj" />
+    <ProjectReference Include="..\Rtl.Services\Rtl.Services.csproj" />
   </ItemGroup>
 
   <ItemGroup>
